--- a/components/banner-swiper/banner-swiper.css
+++ b/components/banner-swiper/banner-swiper.css
@@ -1,23 +1,1 @@
-.banner-swiper {
-  width: 100%; }
-  .banner-swiper .slide-image {
-    width: 100%; }
-  .banner-swiper .wx-swiper-dots.wx-swiper-dots-horizontal {
-    margin-bottom: 2rpx; }
-  .banner-swiper .wx-swiper-dot {
-    width: 10rpx;
-    display: inline-flex;
-    height: 10rpx;
-    margin-left: 10rpx;
-    justify-content: space-between;
-    background: #fff; }
-  .banner-swiper .wx-swiper-dot-active {
-    width: 26rpx;
-    display: inline-flex;
-    height: 10rpx;
-    justify-content: space-between;
-    content: '';
-    flex-grow: 1;
-    border-radius: 8rpx; }
-
-/*# sourceMappingURL=banner-swiper.css.map */
+.banner-swiper{width:100%}.banner-swiper .slide-image{width:100%}.banner-swiper .wx-swiper-dots.wx-swiper-dots-horizontal{margin-bottom:2rpx}.banner-swiper .wx-swiper-dot{width:10rpx;display:inline-flex;height:10rpx;margin-left:10rpx;justify-content:space-between;background:#fff}.banner-swiper .wx-swiper-dot-active{width:26rpx;display:inline-flex;height:10rpx;justify-content:space-between;content:'';flex-grow:1;border-radius:8rpx}
