--- a/components/product_list_single/product_list_single.css
+++ b/components/product_list_single/product_list_single.css
@@ -1,55 +1,1 @@
-.product_list_single .item {
-  padding: 25rpx 24rpx;
-  position: relative;
-  border-top: 1rpx solid #e6e6e6;
-  display: flex; }
-  .product_list_single .item:first-child {
-    border-top: 0; }
-  .product_list_single .item .pic {
-    width: 200rpx;
-    height: 150rpx;
-    line-height: 150rpx;
-    position: relative;
-    margin-right: 20rpx;
-    text-align: center; }
-    .product_list_single .item .pic image {
-      width: 100%;
-      max-height: 100%;
-      vertical-align: top; }
-  .product_list_single .item .info {
-    flex: 1;
-    min-width: 0; }
-    .product_list_single .item .info .namewp {
-      font-size: 28rpx;
-      height: 46rpx;
-      display: flex;
-      justify-content: space-between; }
-      .product_list_single .item .info .namewp .name {
-        color: #333;
-        max-width: 65%;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap; }
-      .product_list_single .item .info .namewp .price {
-        width: 160rpx;
-        color: #ee674c;
-        text-align: right; }
-    .product_list_single .item .info .desc {
-      font-size: 24rpx;
-      color: #999;
-      line-height: 32rpx;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: -webkit-box;
-      -webkit-box-orient: vertical;
-      -webkit-line-clamp: 2; }
-    .product_list_single .item .info .com {
-      margin-top: 14rpx;
-      font-size: 24rpx;
-      color: #999;
-      max-width: 100%;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap; }
-
-/*# sourceMappingURL=product_list_single.css.map */
+.product_list_single .item{padding:25rpx 24rpx;position:relative;border-top:1rpx solid #e6e6e6;display:flex}.product_list_single .item:first-child{border-top:0}.product_list_single .item .pic{width:200rpx;height:150rpx;line-height:150rpx;position:relative;margin-right:20rpx;text-align:center}.product_list_single .item .pic image{width:100%;max-height:100%;vertical-align:top}.product_list_single .item .info{flex:1;min-width:0}.product_list_single .item .info .namewp{font-size:28rpx;height:46rpx;display:flex;justify-content:space-between}.product_list_single .item .info .namewp .name{color:#333;max-width:65%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}.product_list_single .item .info .namewp .price{width:160rpx;color:#ee674c;text-align:right}.product_list_single .item .info .desc{font-size:24rpx;color:#999;line-height:32rpx;overflow:hidden;text-overflow:ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:2}.product_list_single .item .info .com{margin-top:14rpx;font-size:24rpx;color:#999;max-width:100%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
