--- a/components/tab_bar/tab_bar.css
+++ b/components/tab_bar/tab_bar.css
@@ -1,60 +1,1 @@
-.tabBar {
-  width: 100%;
-  box-sizing: border-box;
-  position: fixed;
-  bottom: 0;
-  padding: 0 24rpx;
-  height: 98rpx;
-  background-color: #fff;
-  box-shadow: 0px 0px 4rpx 0px rgba(0, 0, 0, 0.1); }
-  .tabBar-placeholder {
-    height: 98rpx; }
-  .tabBar .item {
-    padding-top: 10rpx;
-    width: 140rpx;
-    display: table;
-    text-align: center; }
-    .tabBar .item .cont {
-      display: table-cell;
-      vertical-align: middle;
-      text-align: center; }
-      .tabBar .item .cont .pic {
-        width: 49rpx;
-        height: 45rpx;
-        margin: 0 auto;
-        margin-bottom: 5rpx; }
-        .tabBar .item .cont .pic.i1 {
-          background: url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/icon-home.png) top center/40rpx 40rpx no-repeat; }
-          .tabBar .item .cont .pic.i1.ison {
-            background-image: url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/hover-home.png); }
-        .tabBar .item .cont .pic.i2 {
-          background: url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/icon-fenlei.png) top center/40rpx 40rpx no-repeat; }
-          .tabBar .item .cont .pic.i2.ison {
-            background-image: url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/hover-fenlei.png); }
-        .tabBar .item .cont .pic.i3 {
-          background: url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/icon-luntan.png?t=1) top center/40rpx 40rpx no-repeat; }
-          .tabBar .item .cont .pic.i3.ison {
-            background-image: url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/hover-luntan.png); }
-        .tabBar .item .cont .pic.i4 {
-          background: url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/icon-user.png) top center/40rpx 40rpx no-repeat; }
-          .tabBar .item .cont .pic.i4.ison {
-            background-image: url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/hover-user.png); }
-        .tabBar .item .cont .pic image {
-          width: 100%;
-          height: 100%;
-          display: block; }
-      .tabBar .item .cont .text {
-        font-size: 22rpx;
-        color: #999; }
-        .tabBar .item .cont .text.on {
-          color: #181c1f; }
-    .tabBar .item.more {
-      position: relative; }
-      .tabBar .item.more .cont {
-        position: absolute;
-        top: -32rpx; }
-        .tabBar .item.more .cont .pic {
-          width: 144rpx;
-          height: 132rpx; }
-
-/*# sourceMappingURL=tab_bar.css.map */
+.tabBar{width:100%;box-sizing:border-box;position:fixed;bottom:0;padding:0 24rpx;height:98rpx;background-color:#fff;box-shadow:0px 0px 4rpx 0px rgba(0,0,0,0.1)}.tabBar-placeholder{height:98rpx}.tabBar .item{padding-top:10rpx;width:140rpx;display:table;text-align:center}.tabBar .item .cont{display:table-cell;vertical-align:middle;text-align:center}.tabBar .item .cont .pic{width:49rpx;height:45rpx;margin:0 auto;margin-bottom:5rpx}.tabBar .item .cont .pic.i1{background:url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/icon-home.png) top center/40rpx 40rpx no-repeat}.tabBar .item .cont .pic.i1.ison{background-image:url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/hover-home.png)}.tabBar .item .cont .pic.i2{background:url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/icon-fenlei.png) top center/40rpx 40rpx no-repeat}.tabBar .item .cont .pic.i2.ison{background-image:url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/hover-fenlei.png)}.tabBar .item .cont .pic.i3{background:url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/icon-luntan.png?t=1) top center/40rpx 40rpx no-repeat}.tabBar .item .cont .pic.i3.ison{background-image:url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/hover-luntan.png)}.tabBar .item .cont .pic.i4{background:url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/icon-user.png) top center/40rpx 40rpx no-repeat}.tabBar .item .cont .pic.i4.ison{background-image:url(http://sysweet-demo.oss-cn-beijing.aliyuncs.com/airclean/images/hover-user.png)}.tabBar .item .cont .pic image{width:100%;height:100%;display:block}.tabBar .item .cont .text{font-size:22rpx;color:#999}.tabBar .item .cont .text.on{color:#181c1f}.tabBar .item.more{position:relative}.tabBar .item.more .cont{position:absolute;top:-32rpx}.tabBar .item.more .cont .pic{width:144rpx;height:132rpx}
