--- a/style/common.css
+++ b/style/common.css
@@ -1,400 +1,1 @@
-.box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap; }
-
-.box-lr {
-  -webkit-box-direction: normal;
-  -moz-flex-direction: row;
-  flex-direction: row; }
-
-.box-lr, .box-rl {
-  -webkit-box-orient: horizontal; }
-
-.box-rl {
-  -webkit-box-pack: end;
-  -webkit-box-direction: reverse;
-  -moz-flex-direction: row-reverse;
-  flex-direction: row-reverse; }
-
-.box-tb {
-  -webkit-box-direction: normal;
-  -moz-flex-direction: column;
-  flex-direction: column; }
-
-.box-bt, .box-tb {
-  -webkit-box-orient: vertical; }
-
-.box-bt {
-  -webkit-box-pack: end;
-  -webkit-box-direction: reverse;
-  -moz-flex-direction: column-reverse;
-  flex-direction: column-reverse; }
-
-.box-pack-center {
-  -webkit-box-pack: center;
-  -moz-justify-content: center;
-  justify-content: center; }
-
-.box-pack-start {
-  -webkit-box-pack: start;
-  -moz-justify-content: flex-start;
-  justify-content: flex-start; }
-
-.box-pack-end {
-  -webkit-box-pack: end;
-  -moz-justify-content: flex-end;
-  justify-content: flex-end; }
-
-.box-pack-between {
-  -webkit-box-pack: justify;
-  -moz-justify-content: space-between;
-  justify-content: space-between; }
-
-.box-align-center {
-  -webkit-box-align: center;
-  -moz-align-items: center;
-  align-items: center; }
-
-.box-align-start {
-  -webkit-box-align: start;
-  -moz-align-items: start;
-  align-items: flex-start; }
-
-.box-align-end {
-  -webkit-box-align: end;
-  -moz-align-items: end;
-  align-items: flex-end; }
-
-.self-align-center {
-  margin: 0 auto;
-  align-self: center;
-  -webkit-align-self: center; }
-
-.self-align-start {
-  align-self: flex-start;
-  -webkit-align-self: flex-start; }
-
-.self-align-end {
-  align-self: flex-end;
-  -webkit-align-self: flex-end; }
-
-.self-align-stretch {
-  align-self: stretch;
-  -webkit-align-self: stretch; }
-
-.box-wrap {
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
-
-.box-nowrap {
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap; }
-
-.flex {
-  -moz-flex-grow: 1;
-  -webkit-flex-grow: 1;
-  flex-grow: 1; }
-
-page {
-  font-size: 30rpx;
-  color: #333;
-  font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif; }
-
-.ele-container {
-  width: 100%;
-  box-sizing: border-box;
-  overflow-x: hidden; }
-
-.pdbm100 {
-  padding-bottom: 100rpx; }
-
-a {
-  color: inherit; }
-
-.blank20 {
-  width: 100%;
-  height: 20rpx;
-  box-sizing: border-box;
-  overflow: hidden;
-  background-color: #f5f6fb; }
-
-.bg-color {
-  background-color: #f5f6fb; }
-
-.bg-fff {
-  background-color: #fff; }
-
-.c-fff {
-  color: #fff; }
-
-.c-ccc {
-  color: #ccc; }
-
-.bg-mianColor {
-  background-color: #56cbcb; }
-
-.plt24 {
-  padding-left: 24rpx; }
-
-.ft-nowap {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; }
-
-.clearfix:after {
-  content: "";
-  display: block;
-  visibility: hidden;
-  clear: both;
-  height: 0;
-  font-size: 0; }
-
-/* loading */
-.loading-container {
-  text-align: center;
-  padding-top: 30rpx; }
-  .loading-container .loading-gif {
-    display: inline-block;
-    width: 40rpx;
-    height: 40rpx; }
-    .loading-container .loading-gif image {
-      width: 100%;
-      height: 100%; }
-  .loading-container .loading-text {
-    display: inline-block;
-    font-size: 24rpx;
-    color: #999;
-    margin-left: 16rpx; }
-
-.content-box-empty {
-  padding-top: 180rpx;
-  text-align: center;
-  color: #999; }
-  .content-box-empty .pic {
-    width: 371rpx;
-    height: 371rpx;
-    margin: 0 auto; }
-    .content-box-empty .pic image {
-      width: 100%;
-      height: 100%;
-      display: block;
-      vertical-align: top; }
-  .content-box-empty .msg {
-    font-size: 30rpx;
-    margin-bottom: 28rpx; }
-  .content-box-empty .tip {
-    font-size: 24rpx; }
-
-.menuLi {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: #fff;
-  filter: alpha(opacity=902);
-  -moz-opacity: 0.902;
-  opacity: 0.902;
-  z-index: 30;
-  visibility: hidden; }
-  .menuLi.show {
-    visibility: visible;
-    transition-delay: 0.1s; }
-  .menuLi .inner {
-    width: 100%;
-    box-sizing: border-box;
-    position: absolute;
-    bottom: 0;
-    padding: 0 80rpx; }
-    .menuLi .inner .list {
-      width: 100%;
-      box-sizing: border-box;
-      column-count: 3;
-      column-gap: 130rpx; }
-      .menuLi .inner .list .item {
-        margin-bottom: 50rpx; }
-        .menuLi .inner .list .item image {
-          display: block;
-          width: 110rpx;
-          height: 110rpx; }
-        .menuLi .inner .list .item text {
-          display: inline-block;
-          text-align: center;
-          font-size: 26rpx;
-          color: #999;
-          margin-top: 16rpx; }
-    .menuLi .inner .close-box {
-      width: 30rpx;
-      height: 31rpx;
-      margin: 40rpx auto 55rpx; }
-      .menuLi .inner .close-box image {
-        width: 100%;
-        height: 100%; }
-
-.weui-toast {
-  position: fixed;
-  z-index: 100;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%); }
-  .weui-toast .weui-toast__content {
-    width: auto;
-    height: auto;
-    padding: 26rpx;
-    border-radius: 10rpx;
-    background: none;
-    background-color: rgba(0, 0, 0, 0.65);
-    color: #fff;
-    text-align: center;
-    text-overflow: ellipsis;
-    font-size: 30rpx; }
-
-.overflow-scroll {
-  width: auto;
-  height: auto;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 98rpx;
-  left: 0;
-  -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: -ms-autohiding-scrollbar; }
-
-.text-overflow {
-  text-overflow: ellipsis;
-  white-space: nowrap; }
-
-.row {
-  padding: 24rpx; }
-  .row .row-l .iconfont {
-    width: 54rpx;
-    font-size: 34rpx;
-    color: #ccc;
-    display: inline-block;
-    vertical-align: 2rpx; }
-  .row .row-l .col-t {
-    font-size: 26rpx;
-    color: #333;
-    vertical-align: 6rpx; }
-  .row .row-r {
-    font-size: 26rpx;
-    color: #868686; }
-    .row .row-r .btn {
-      display: inline-block;
-      width: 120rpx;
-      height: 40rpx;
-      line-height: 40rpx;
-      text-align: center;
-      font-size: 24rpx;
-      border-radius: 8rpx;
-      color: #fff;
-      vertical-align: 4rpx; }
-      .row .row-r .btn.c-ff8f3c {
-        background-color: #ff8f3c; }
-      .row .row-r .btn.c-50d0c2 {
-        background-color: #50d0c2; }
-    .row .row-r .iconfont {
-      font-size: 26rpx;
-      color: #ccc;
-      display: inline-block;
-      vertical-align: 2rpx; }
-
-.m-cell {
-  background-color: #fff;
-  position: relative;
-  z-index: 1; }
-  .m-cell .cell-item {
-    display: flex;
-    position: relative;
-    overflow: hidden;
-    box-sizing: border-box;
-    border-bottom: 1rpx solid #e6e6e6;
-    padding: 0 24rpx; }
-    .m-cell .cell-item .cell-left {
-      color: #333;
-      font-size: 28rpx;
-      white-space: nowrap;
-      display: flex;
-      align-items: center;
-      padding-right: 60rpx; }
-      .m-cell .cell-item .cell-left .iconfont {
-        display: block;
-        color: #999999;
-        margin-right: 14rpx; }
-    .m-cell .cell-item .cell-right {
-      flex: 1;
-      width: 100%;
-      min-height: 96rpx;
-      color: #525252;
-      text-align: right;
-      font-size: 28rpx;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end; }
-  .m-cell .cell-icon {
-    margin-right: 20rpx; }
-    .m-cell .cell-icon:before, .m-cell .cell-icon:after {
-      color: #999; }
-    .m-cell .cell-icon image {
-      display: block; }
-  .m-cell .cell-arrow:after {
-    display: inline-block;
-    font-family: "iconfont" !important;
-    font-size: 32rpx;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    content: '\e600';
-    line-height: 48rpx; }
-  .m-cell .cell-input {
-    flex: 1;
-    border: none;
-    background: transparent;
-    display: flex;
-    justify-content: flex-start;
-    text-align: left;
-    /* fuck UC */ }
-    .m-cell .cell-input.cell-input-bd {
-      border: 1rpx solid #e6e6e6;
-      border-radius: 10rpx;
-      padding: 10rpx 20rpx;
-      height: 50rpx;
-      box-sizing: border-box; }
-  .m-cell .cell-textarea {
-    width: 100%;
-    display: block;
-    /* for old android */
-    height: 250rpx;
-    padding: 20rpx 18rpx;
-    border: 1rpx solid #e6e6e6;
-    box-sizing: border-box;
-    text-align: left;
-    border-radius: 10rpx; }
-  .m-cell .w60 {
-    width: 60rpx;
-    height: 60rpx; }
-  .m-cell .w120 {
-    width: 120rpx !important; }
-  .m-cell .blankLR20 {
-    padding: 0 20rpx; }
-  .m-cell .nobdm {
-    border-bottom: 0; }
-
-@keyframes showAnimation {
-  0% {
-    transform: scaleY(0); }
-  100% {
-    transform: scaleY(1); } }
-@keyframes hideAnimation {
-  0% {
-    transform: scaleY(1); }
-  100% {
-    transform: scaleY(0); } }
-
-/*# sourceMappingURL=common.css.map */
+.box{display:-webkit-box;display:-ms-flexbox;display:-webkit-flex;display:flex;-ms-flex-wrap:nowrap;-webkit-flex-wrap:nowrap;flex-wrap:nowrap}.box-lr{-webkit-box-direction:normal;-moz-flex-direction:row;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row}.box-lr,.box-rl{-webkit-box-orient:horizontal}.box-rl{-webkit-box-pack:end;-webkit-box-direction:reverse;-moz-flex-direction:row-reverse;-webkit-flex-direction:row-reverse;-ms-flex-direction:row-reverse;flex-direction:row-reverse}.box-tb{-webkit-box-direction:normal;-moz-flex-direction:column;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column}.box-bt,.box-tb{-webkit-box-orient:vertical}.box-bt{-webkit-box-pack:end;-webkit-box-direction:reverse;-moz-flex-direction:column-reverse;-webkit-flex-direction:column-reverse;-ms-flex-direction:column-reverse;flex-direction:column-reverse}.box-pack-center{-webkit-box-pack:center;-moz-justify-content:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center}.box-pack-start{-webkit-box-pack:start;-moz-justify-content:flex-start;-webkit-justify-content:flex-start;-ms-flex-pack:start;justify-content:flex-start}.box-pack-end{-webkit-box-pack:end;-moz-justify-content:flex-end;-webkit-justify-content:flex-end;-ms-flex-pack:end;justify-content:flex-end}.box-pack-between{-webkit-box-pack:justify;-moz-justify-content:space-between;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between}.box-align-center{-webkit-box-align:center;-moz-align-items:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}.box-align-start{-webkit-box-align:start;-moz-align-items:start;-webkit-align-items:flex-start;-ms-flex-align:start;align-items:flex-start}.box-align-end{-webkit-box-align:end;-moz-align-items:end;-webkit-align-items:flex-end;-ms-flex-align:end;align-items:flex-end}.self-align-center{margin:0 auto;-ms-flex-item-align:center;align-self:center;-webkit-align-self:center}.self-align-start{-ms-flex-item-align:start;align-self:flex-start;-webkit-align-self:flex-start}.self-align-end{-ms-flex-item-align:end;align-self:flex-end;-webkit-align-self:flex-end}.self-align-stretch{-ms-flex-item-align:stretch;align-self:stretch;-webkit-align-self:stretch}.box-wrap{-ms-flex-wrap:wrap;-webkit-flex-wrap:wrap;flex-wrap:wrap}.box-nowrap{-ms-flex-wrap:nowrap;-webkit-flex-wrap:nowrap;flex-wrap:nowrap}.flex{-moz-flex-grow:1;-webkit-flex-grow:1;-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1}page{font-size:30rpx;color:#333;font-family:-apple-system-font,Helvetica Neue,Helvetica,sans-serif}.ele-container{width:100%;box-sizing:border-box;overflow-x:hidden}.pdbm100{padding-bottom:100rpx}a{color:inherit}.blank20{width:100%;height:20rpx;box-sizing:border-box;overflow:hidden;background-color:#f5f6fb}.bg-color{background-color:#f5f6fb}.bg-fff{background-color:#fff}.c-fff{color:#fff}.c-ccc{color:#ccc}.bg-mianColor{background-color:#56cbcb}.plt24{padding-left:24rpx}.ft-nowap{white-space:nowrap;overflow:hidden;text-overflow:ellipsis}.clearfix:after{content:"";display:block;visibility:hidden;clear:both;height:0;font-size:0}.loading-container{text-align:center;padding-top:30rpx}.loading-container .loading-gif{display:inline-block;width:40rpx;height:40rpx}.loading-container .loading-gif image{width:100%;height:100%}.loading-container .loading-text{display:inline-block;font-size:24rpx;color:#999;margin-left:16rpx}.content-box-empty{padding-top:180rpx;text-align:center;color:#999}.content-box-empty .pic{width:371rpx;height:371rpx;margin:0 auto}.content-box-empty .pic image{width:100%;height:100%;display:block;vertical-align:top}.content-box-empty .msg{font-size:30rpx;margin-bottom:28rpx}.content-box-empty .tip{font-size:24rpx}.menuLi{position:fixed;top:0;left:0;bottom:0;right:0;background-color:#fff;filter:alpha(opacity=902);-moz-opacity:0.902;opacity:0.902;z-index:30;visibility:hidden}.menuLi.show{visibility:visible;-webkit-transition-delay:0.1s;transition-delay:0.1s}.menuLi .inner{width:100%;box-sizing:border-box;position:absolute;bottom:0;padding:0 80rpx}.menuLi .inner .list{width:100%;box-sizing:border-box;-webkit-column-count:3;-moz-column-count:3;column-count:3;-webkit-column-gap:130rpx;-moz-column-gap:130rpx;column-gap:130rpx}.menuLi .inner .list .item{margin-bottom:50rpx}.menuLi .inner .list .item image{display:block;width:110rpx;height:110rpx}.menuLi .inner .list .item text{display:inline-block;text-align:center;font-size:26rpx;color:#999;margin-top:16rpx}.menuLi .inner .close-box{width:30rpx;height:31rpx;margin:40rpx auto 55rpx}.menuLi .inner .close-box image{width:100%;height:100%}.weui-toast{position:fixed;z-index:100;top:50%;left:50%;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%)}.weui-toast .weui-toast__content{width:auto;height:auto;padding:26rpx;border-radius:10rpx;background:none;background-color:rgba(0,0,0,0.65);color:#fff;text-align:center;text-overflow:ellipsis;font-size:30rpx}.overflow-scroll{width:auto;height:auto;overflow-x:hidden;overflow-y:scroll;position:absolute;top:0;right:0;bottom:98rpx;left:0;-webkit-overflow-scrolling:touch;-ms-overflow-style:-ms-autohiding-scrollbar}.text-overflow{text-overflow:ellipsis;white-space:nowrap}.row{padding:24rpx}.row .row-l .iconfont{width:54rpx;font-size:34rpx;color:#ccc;display:inline-block;vertical-align:2rpx}.row .row-l .col-t{font-size:26rpx;color:#333;vertical-align:6rpx}.row .row-r{font-size:26rpx;color:#868686}.row .row-r .btn{display:inline-block;width:120rpx;height:40rpx;line-height:40rpx;text-align:center;font-size:24rpx;border-radius:8rpx;color:#fff;vertical-align:4rpx}.row .row-r .btn.c-ff8f3c{background-color:#ff8f3c}.row .row-r .btn.c-50d0c2{background-color:#50d0c2}.row .row-r .iconfont{font-size:26rpx;color:#ccc;display:inline-block;vertical-align:2rpx}.m-cell{background-color:#fff;position:relative;z-index:1}.m-cell .cell-item{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;position:relative;overflow:hidden;box-sizing:border-box;border-bottom:1rpx solid #e6e6e6;padding:0 24rpx}.m-cell .cell-item .cell-left{color:#333;font-size:28rpx;white-space:nowrap;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;padding-right:60rpx}.m-cell .cell-item .cell-left .iconfont{display:block;color:#999999;margin-right:14rpx}.m-cell .cell-item .cell-right{-webkit-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;width:100%;min-height:96rpx;color:#525252;text-align:right;font-size:28rpx;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:end;-webkit-justify-content:flex-end;-ms-flex-pack:end;justify-content:flex-end}.m-cell .cell-icon{margin-right:20rpx}.m-cell .cell-icon:before,.m-cell .cell-icon:after{color:#999}.m-cell .cell-icon image{display:block}.m-cell .cell-arrow:after{display:inline-block;font-family:"iconfont" !important;font-size:32rpx;font-style:normal;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;content:'\e600';line-height:48rpx}.m-cell .cell-input{-webkit-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;border:none;background:transparent;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:start;-webkit-justify-content:flex-start;-ms-flex-pack:start;justify-content:flex-start;text-align:left}.m-cell .cell-input.cell-input-bd{border:1rpx solid #e6e6e6;border-radius:10rpx;padding:10rpx 20rpx;height:50rpx;box-sizing:border-box}.m-cell .cell-textarea{width:100%;display:block;height:250rpx;padding:20rpx 18rpx;border:1rpx solid #e6e6e6;box-sizing:border-box;text-align:left;border-radius:10rpx}.m-cell .w60{width:60rpx;height:60rpx}.m-cell .w120{width:120rpx !important}.m-cell .blankLR20{padding:0 20rpx}.m-cell .nobdm{border-bottom:0}@-webkit-keyframes showAnimation{0%{-webkit-transform:scaleY(0);transform:scaleY(0)}100%{-webkit-transform:scaleY(1);transform:scaleY(1)}}@keyframes showAnimation{0%{-webkit-transform:scaleY(0);transform:scaleY(0)}100%{-webkit-transform:scaleY(1);transform:scaleY(1)}}@-webkit-keyframes hideAnimation{0%{-webkit-transform:scaleY(1);transform:scaleY(1)}100%{-webkit-transform:scaleY(0);transform:scaleY(0)}}@keyframes hideAnimation{0%{-webkit-transform:scaleY(1);transform:scaleY(1)}100%{-webkit-transform:scaleY(0);transform:scaleY(0)}}
