--- a/pages/my/statement.wxml
+++ b/pages/my/statement.wxml
@@ -10,7 +10,7 @@
     <view class="statement-item flex flex-main-justify" wx:for="{{list}}" wx:key="id">
       <view class="flex-box1 statement-h1">
         <view class="statement-name">{{item.name}}</view>
-        <view class="statement-action">{{item.words}}{{item.words}}{{item.words}}</view>
+        <view class="statement-action">{{item.words}}</view>
       </view>
 
       <view class="statement-time flex-box0">{{item.time}}</view>
