--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -79,7 +79,7 @@
                   <view class="jpProductItem-title">{{item.name}}</view>
                   <view class="jpProductItem-price flex">
                     <view class="jpProductItem-label">售价：</view>
-                    <view class="jpProductItem-numBlock"><text class="jpProductItem-num">{{item.price}}</text><text class="jpProductItem-unit">元</text></view>
+                    <view class="jpProductItem-numBlock"><text class="jpProductItem-num">{{item.price}}</text><text wx-if="{{item.price>0}}" class="jpProductItem-unit">元</text></view>
                   </view>
                   <view class="jpProductItem-shop">商家：{{item.company}}</view>
                 </view>
